syntax = "proto3";

package gws;

option java_package = "net.foreworld.gws.protobuf";
option java_outer_classname = "Group";

message GroupProtobuf {
  string id = 1;
}

message GroupSearchProtobuf {
  string group_type = 1;
}

message GroupEntryProtobuf {
  string group_id = 1;
}